네이밍 수정

--- a/app/src/main/res/layout/fragment_search_main.xml
+++ b/app/src/main/res/layout/fragment_search_main.xml
@@ -132,7 +132,7 @@
         </androidx.core.widget.NestedScrollView>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/searchTopFab"
+            android:id="@+id/fab_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center_horizontal"
