네이밍 수정

--- a/app/src/main/res/layout/item_auto_complete_texv_view.xml
+++ b/app/src/main/res/layout/item_auto_complete_texv_view.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content">
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/itemAutoCompleteText"
+            android:id="@+id/tv_item_ac_tv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginVertical="@dimen/_8sdp"
