네이밍 수정

--- a/app/src/main/res/layout/item_dialog_edit_text.xml
+++ b/app/src/main/res/layout/item_dialog_edit_text.xml
@@ -24,12 +24,12 @@
         android:paddingTop="@dimen/_10sdp">
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/dialogEditTextLayout"
+            android:id="@+id/et_dialog_layout"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@{hint}"
-            android:theme="@style/myEditText"
+            android:theme="@style/myEditTextOutlineColor"
             app:placeholderText="@{placeHolder}"
             app:endIconMode="clear_text"
             app:errorTextAppearance="@style/myTextSize8sdp"
@@ -37,7 +37,7 @@
             app:placeholderTextAppearance="@style/myTextSize11sdp">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/dialogEditText"
+                android:id="@+id/et_dialog"
                 android:layout_height="@dimen/_36sdp"
                 android:layout_width="match_parent"
                 android:maxLength="30"
