네이밍 수정

--- a/app/src/main/res/layout/item_recycler_folder_grid.xml
+++ b/app/src/main/res/layout/item_recycler_folder_grid.xml
@@ -16,8 +16,8 @@
         android:orientation="vertical">
 
         <com.google.android.material.card.MaterialCardView
+            android:id="@+id/card_view_item_folder_grid"
             android:layout_gravity="center_horizontal"
-            android:id="@+id/itemListFolderCardView"
             android:layout_width="@dimen/_64sdp"
             android:layout_height="@dimen/_64sdp"
             android:layout_margin="@dimen/_4sdp"
@@ -25,7 +25,7 @@
             app:cardElevation="@dimen/_3sdp">
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/itemListFolderNameText"
+                android:id="@+id/tv_item_folder_grid_title"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:ellipsize="end"
@@ -37,8 +37,8 @@
                 tools:text="일곱글자까지됨세줄까지됨\n세줄까지됨" />
 
             <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/icon_item_folder_grid_drag_handle"
                 setDragHandle2="@{folder.folderName}"
-                android:id="@+id/itemListFolderDragHandle"
                 android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -50,7 +50,7 @@
                 tools:src="@drawable/icon_drag_handle2" />
 
             <com.google.android.material.checkbox.MaterialCheckBox
-                android:id="@+id/itemListFolderCheckBox"
+                android:id="@+id/cb_item_folder_grid"
                 android:layout_width="@dimen/_20sdp"
                 android:layout_height="@dimen/_20sdp"
                 android:layout_gravity="start"
@@ -67,23 +67,24 @@
         </com.google.android.material.card.MaterialCardView>
 
         <androidx.appcompat.widget.LinearLayoutCompat
-            android:id="@+id/itemListFolderContentsSizeLayout"
+            android:id="@+id/tv_item_folder_grid_contents_size_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal">
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/itemListFolderContentsSizeText"
+                android:id="@+id/tv_item_folder_grid_contents_size"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/_8sdp"
                 tools:text="0" />
 
             <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tv_item_folder_grid_items"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_2sdp"
-                android:text="@string/items"
+                android:text="@string/item_folder_items"
                 android:textSize="@dimen/_8sdp" />
         </androidx.appcompat.widget.LinearLayoutCompat>
     </androidx.appcompat.widget.LinearLayoutCompat>
