네이밍 수정

--- a/app/src/main/res/layout/fragment_size.xml
+++ b/app/src/main/res/layout/fragment_size.xml
@@ -47,7 +47,7 @@
                     app:layout_constraintTop_toTopOf="parent">
 
                     <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/iv_size"
+                        android:id="@+id/iv_size_picture"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" />
 
